discussion/kv_engine/148331/148331_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma wait stats support

Change-Id: Ib0df3a982ba8014a996100e698288a40ea1a0b06

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-17 18:28:13.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-17 19:45:03.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29457/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29457/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34321/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34321/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7729/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7729/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7729/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8351/ : FAILURE

Compile error at [2021-03-17T18:33:05.574Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8351/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9435/ : FAILURE

Compile error at [2021-03-17T19:29:38.326Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9645/ : FAILURE

Compile error at [2021-03-17T19:23:13.217Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9645/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17200/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6270/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9290/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-03-20 00:01:15.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
